--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1", features = ["full"] }
 axum = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+crossbeam-channel = "0.5"
