--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ axum = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 crossbeam-channel = "0.5"
+
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "engine_benchmark"
+harness = false
